--- a/zoia_lib/UI/MainWindow.ui
+++ b/zoia_lib/UI/MainWindow.ui
@@ -42,7 +42,7 @@
           </size>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>2</number>
          </property>
          <widget class="QWidget" name="ps_tab">
           <attribute name="title">
@@ -184,7 +184,7 @@
           <attribute name="title">
            <string>SD Card Patches</string>
           </attribute>
-          <layout class="QGridLayout" name="gridLayout_9">
+          <layout class="QGridLayout" name="gridLayout_3">
            <item row="0" column="0">
             <widget class="QLineEdit" name="sd_filter_text">
              <property name="text">
@@ -220,14 +220,44 @@
            </item>
            <item row="1" column="0" colspan="2">
             <widget class="QTableView" name="sd_tableview">
+             <property name="showGrid">
+              <bool>false</bool>
+             </property>
+             <property name="gridStyle">
+              <enum>Qt::NoPen</enum>
+             </property>
+             <property name="sortingEnabled">
+              <bool>true</bool>
+             </property>
+             <property name="wordWrap">
+              <bool>false</bool>
+             </property>
+             <property name="cornerButtonEnabled">
+              <bool>false</bool>
+             </property>
              <attribute name="horizontalHeaderCascadingSectionResizes">
               <bool>true</bool>
              </attribute>
-             <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-              <bool>true</bool>
+             <attribute name="horizontalHeaderDefaultSectionSize">
+              <number>120</number>
+             </attribute>
+             <attribute name="horizontalHeaderMinimumSectionSize">
+              <number>64</number>
              </attribute>
              <attribute name="horizontalHeaderStretchLastSection">
               <bool>true</bool>
+             </attribute>
+             <attribute name="verticalHeaderVisible">
+              <bool>false</bool>
+             </attribute>
+             <attribute name="verticalHeaderCascadingSectionResizes">
+              <bool>true</bool>
+             </attribute>
+             <attribute name="verticalHeaderHighlightSections">
+              <bool>false</bool>
+             </attribute>
+             <attribute name="verticalHeaderStretchLastSection">
+              <bool>false</bool>
              </attribute>
             </widget>
            </item>
@@ -274,7 +304,13 @@
     <addaction name="separator"/>
     <addaction name="action_quit"/>
    </widget>
+   <widget class="QMenu" name="sdcard_menu">
+    <property name="title">
+     <string>SD Cards</string>
+    </property>
+   </widget>
    <addaction name="file_menu"/>
+   <addaction name="sdcard_menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="action_connect_to_PatchStorage">
